# transformer_candle

./: .gitignore  COMPLETE_STREAMING_GUIDE.md  Cargo.toml  QUICK_START_STREAMING.md  README.md  RESTART_550M_TRAINING.md  RTX5090_TRAINING_GUIDE.md  RUNPOD_COMPLETE_SETUP.md  RUNPOD_FULL_PIPELINE.sh  RUNPOD_RESTART_COMMANDS.sh  SIMPLE_RUNPOD_STEPS.md  STREAMING_TRAINING.md  main.rs  runpod_setup.sh
.github/workflows/: ci.yml
benches/: plot_attention_results.py  readme.md
cli/: Cargo.toml
cli/src/: main.rs
configs/: local.yaml  m3_20m_streaming.yaml  m3_20m_streaming_config.json  m3_medium.yaml  rtx5090_1b.yaml  rtx5090_550m.yaml  runpod_1b.yaml  runpod_20m_streaming.yaml  runpod_2b.yaml  runpod_400m_streaming.yaml  runpod_400m_streaming_config.json  runpod_4b.yaml
core/: Cargo.toml
core/src/: lib.rs
core/src/architectures/: adaptive_depth.rs  cascade.rs  mod.rs  progressive.rs
core/src/attention/: adaptive_window.rs  cascade_attention.rs  hierarchical.rs  mod.rs  sparse_patterns.rs
core/src/generation/: adaptive_sampling.rs  confidence_based.rs  creative_modes.rs  mod.rs
core/src/layers/: activation.rs  embedding.rs  feed_forward.rs  mod.rs  normalization.rs
core/src/memory/: caching.rs  compression.rs  mod.rs  streaming.rs
crates/attention/: Cargo.toml
crates/attention/benches/: correctness.rs  memory.rs  throughput.rs
crates/attention/benches/common/: mod.rs
crates/attention/benchmarks/: RESULTS.md
crates/attention/src/: lib.rs
crates/attention/src/core/: config.rs  errors.rs  mod.rs
crates/attention/src/fused/: mod.rs
crates/attention/src/interop/: mod.rs  rope_adapter.rs  types.rs
crates/attention/src/kv_cache/: api.rs  layout.rs  mod.rs  paged.rs  tests.rs
crates/attention/src/masks/: blocked.rs  causal.rs  mod.rs  padding.rs  tests.rs
crates/attention/src/reference/: exact.rs  mod.rs
crates/embedding/: ACCEPTANCE_ROPE.md  Cargo.toml  rope.md
crates/embedding/benches/: rope.rs
crates/embedding/src/: lib.rs  token.rs
crates/embedding/src/positional/: mod.rs  rope.rs
crates/embedding/tests/: integration_tests.rs  rope_tests.rs  token_tests.rs
crates/layers/: Cargo.toml
crates/layers/benches/: linear_throughput.rs  mlp_throughput.rs  norm_throughput.rs
crates/layers/src/: activations.rs  checks.rs  dtypes.rs  lib.rs  linear.rs  mlp.rs  norm.rs  residual.rs
crates/model/: Cargo.toml
crates/model/src/: block.rs  config.rs  lib.rs  model.rs
crates/model/tests/: model_tests.rs
crates/pretraining-data/: Cargo.toml  HUGGINGFACE_INTEGRATION.md  README.md
crates/pretraining-data/data/processed/: hbs_corpus.txt  mixed_corpus.txt
crates/pretraining-data/data/raw/: HBS_article1.txt  HBS_article10.txt  HBS_article11.txt  HBS_article2.txt  HBS_article3.txt  HBS_article4.txt  HBS_article5.txt  HBS_article6.txt  HBS_article7.txt  HBS_article8.txt  HBS_article9.txt  HBS_journal1.txt  HBS_journal2.txt  HBS_journal3.txt
crates/pretraining-data/data/raw_hf/: download_manifest.json  paulgraham_chunk_0000.txt  paulgraham_chunk_0001.txt  paulgraham_chunk_0002.txt  paulgraham_chunk_0003.txt  paulgraham_chunk_0004.txt  paulgraham_chunk_0005.txt  paulgraham_chunk_0006.txt  paulgraham_chunk_0007.txt  paulgraham_chunk_0008.txt  paulgraham_chunk_0009.txt  paulgraham_chunk_0010.txt  paulgraham_chunk_0011.txt  paulgraham_chunk_0012.txt  paulgraham_chunk_0013.txt  paulgraham_chunk_0014.txt  paulgraham_chunk_0015.txt  paulgraham_chunk_0016.txt  paulgraham_chunk_0017.txt  paulgraham_chunk_0018.txt  paulgraham_chunk_0019.txt  paulgraham_chunk_0020.txt  paulgraham_chunk_0021.txt  paulgraham_chunk_0022.txt  paulgraham_chunk_0023.txt  paulgraham_chunk_0024.txt  paulgraham_chunk_0025.txt  paulgraham_chunk_0026.txt  paulgraham_chunk_0027.txt  paulgraham_chunk_0028.txt  paulgraham_chunk_0029.txt  (+185 more)
crates/pretraining-data/examples/: test_streaming.rs
crates/pretraining-data/scripts/: download_datasets.py  fineweb_sharder.py  requirements.txt  setup.bat  setup.sh
crates/pretraining-data/src/: corpora.rs  lib.rs  preprocessing.rs  sharding.rs
crates/tokenizer/: Cargo.toml  README.md
crates/tokenizer/src/: artifacts.rs  bbpe.rs  config.rs  errors.rs  lib.rs  postprocessor.rs  pretokenizer.rs  trainer.rs  types.rs  validate.rs
crates/tokenizer/tests/: integration_tests.rs  roundtrip.rs  serialization.rs
crates/training/: Cargo.toml  README.md
crates/training/src/: checkpoint.rs  config.rs  lib.rs  logging.rs  loss.rs  metrics.rs  trainer.rs
crates/training/src/data/: mod.rs
crates/training/src/optimizer/: mod.rs  scaler.rs
crates/training/src/scheduler/: mod.rs
crates/training/tests/: smoke.rs
evals/: readme.md
infra/: README.md  runpod-1b-l40s.yaml  runpod-pod.yaml  runpod.md
runs/local/: special_tokens.txt  training.toml
runs/local/tokenizer/: manifest.json  merges.txt  tokenizer.json  vocab.json
scripts/: run_m3_20m_streaming.sh  run_runpod_20m_streaming.sh
src/: gpt.rs  lib.rs  main.rs  tokenizer.rs  training.rs
src/utils/: prompts.rs
tests/: embedding_tests.rs  gpt_tests.rs  main_tests.rs  tokenizer_tests.rs  training_tests.rs
tests/pretraining-data/: integration_tests.rs
tests/tokenizer/: integration_tests.rs  roundtrip.rs
tokenization/: Cargo.toml
tokenization/src/: lib.rs
tokenization/src/processors/: augmentation.rs  mod.rs  preprocessing.rs  streaming.rs
tokenization/src/subword/: adaptive_bpe.rs  context_aware.rs  learned_merge.rs  mod.rs
tokenization/src/vocabularies/: adaptive.rs  compression.rs  mod.rs
training/: Cargo.toml
training/src/: lib.rs  runtime.rs
training/src/memory_efficient/: activation_checkpointing.rs  gradient_checkpointing.rs  micro_batching.rs  mod.rs
training/src/monitoring/: gradient_flow.rs  loss_analysis.rs  memory_profiling.rs  mod.rs
training/src/optimizers/: adaptive_lr.rs  custom_adamw.rs  mod.rs  momentum_variants.rs
training/src/regularization/: gradient_penalty.rs  mod.rs  noise_injection.rs  smart_dropout.rs
training/src/schedulers/: curriculum.rs  loss_based.rs  mod.rs  plateau_detection.rs
utils/: Cargo.toml
utils/src/: lib.rs  wiki.rs
