[workspace]
members = [
    "crates/pretraining-data",
    "crates/tokenizer",
    "crates/embedding",
]

[package]
name = "transformer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "transformer"
path = "main.rs"

[dependencies]
# local crates
pretraining-data = { path = "crates/pretraining-data" }
tokenizer = { path = "crates/tokenizer" }
embedding = { path = "crates/embedding" }
# huggingface's candle and tokenizers
candle-core = "0.9.1"
candle-nn = "0.9.1"
tokenizers = "0.22.1"
