[workspace]
members = [
    "crates/pretraining-data",
    "crates/tokenizer",
    "crates/embedding",
    "crates/attention",
    "crates/layers",
    "crates/model",
    "crates/training",
]

[package]
name = "transformer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "transformer"
path = "main.rs"

[dependencies]
# local crates
pretraining-data = { path = "crates/pretraining-data" }
tokenizer = { path = "crates/tokenizer" }
embedding = { path = "crates/embedding" }
attention = { path = "crates/attention" }
# huggingface's candle and tokenizers
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.9.1" }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.9.1" }
tokenizers = "0.22.1"
