[package]
name = "cascade-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.90"
candle-core = "0.9.1"
candle-nn = "0.9.1"
cascade-core = { path = "../core" }
cascade-training = { path = "../training" }
transformer-tokenization = { path = "../tokenization" }
utils = { path = "../utils" }
indicatif = "0.17"

[features]
default = []
metal = [
    "candle-core/metal",
    "candle-nn/metal",
    "cascade-core/metal",
    "cascade-training/metal"
]
