[package]
name = "cascade-training"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.90"
candle-core = "0.9.1"
candle-nn = "0.9.1"
cascade-core = { path = "../core" }
transformer-tokenization = { path = "../tokenization" }
utils = { path = "../utils" }
fastrand = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
