[package]
name = "attention"
version = "0.1.0"
edition = "2021"

[features]
default = []
fused = []

[dependencies]
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.9.1" }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.9.1" }
embedding = { path = "../embedding" }
