[package]
name = "attention"
version = "0.1.0"
edition = "2021"

[features]
default = []
fused = []

[dependencies]
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.9.1", features = ["cuda"] }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.9.1", features = ["cuda"] }
embedding = { path = "../embedding" }
log = "0.4"

[dev-dependencies]
static_assertions = "1.1"

[[bench]]
name = "throughput"
harness = false

[[bench]]
name = "memory"
harness = false

[[bench]]
name = "correctness"
harness = false
