[package]
name = "model"
version = "0.1.0"
edition = "2021"

[features]
default = ["metal"]
metal = [
    "attention/metal",
    "embedding/metal",
    "layers/metal",
    "candle-core/metal"
]
cuda = [
    "attention/cuda",
    "embedding/cuda",
    "layers/cuda",
    "candle-core/cuda"
]

[dependencies]
attention = { path = "../attention", default-features = false, features = ["fused"] }
embedding = { path = "../embedding", default-features = false }
layers = { path = "../layers", default-features = false }
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.9.1", default-features = false }
log = "0.4"
