[package]
name = "tokenizer"
version = "0.1.0"
edition = "2021"

[features]
default = []
train = ["rand"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "1.0"
tokenizers = "0.22.1"
rand = { version = "0.8", features = ["std"], optional = true }
