[package]
name = "training"
version = "0.1.0"
edition = "2021"

[dependencies]
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.9.1", features = ["metal"] }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.9.1", features = ["metal"] }
model = { path = "../model" }
tokenizer = { path = "../tokenizer", features = ["train"] }
pretraining-data = { path = "../pretraining-data" }
attention = { path = "../attention" }
layers = { path = "../layers" }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
serde_json = "1.0"
serde_yaml = "0.9"
futures = "0.3"
rand = { version = "0.8", features = ["std"] }
tokenizers = "0.22"
sha2 = "0.10"
hex = "0.4"
prost = "0.12"
bytes = "1"
crc32fast = "1.3"
clap = { version = "4.5", features = ["derive"] }
ctrlc = "3.4"

[dev-dependencies]
tempfile = "3"
